--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
+title: GuXiaozhi's Homepage
+page-top-title: GuXiaozhi
+top-section-bg-text: Information Security
+home-subtitle: Guxiaozhi&ensp;|&ensp;顾晓稚
+copyright-text: '&copy; Guxiaozhi 2023-2024. All Rights Reserved.'
